removed href and added contact info

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-01.jpg" alt=""></a>
+                            <a><img src="assets/images/event-01.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Classes</h4></a>
+                            <a><h4>Classes</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Call to schedule</li>
                                 <li><i class="fa fa-phone"></i> 210-475-3477</li>
@@ -201,10 +201,10 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-02.jpg" alt=""></a>
+                            <a><img src="assets/images/event-02.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Private Lessons</h4></a>
+                            <a><h4>Private Lessons</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Mondays by appointment</li>
                                 <li><i class="fa fa-phone"></i> 210-475-3477</li>
@@ -217,10 +217,10 @@
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-03.jpg" alt=""></a>
+                            <a ><img src="assets/images/event-03.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
-                            <a href="event-details.html"><h4>Workshops</h4></a>
+                            <a><h4>Workshops</h4></a>
                             <ul>
                                 <li><i class="fa fa-clock-o"></i> Upcoming Event on Nov 11, 2023</li>
                                 <li><i class="fa fa-check"></i> Spaces limited. Reserve today!</li>
