--- a/index.html
+++ b/index.html
@@ -102,28 +102,28 @@
                 <div class="col-lg-12">
                     <div class="owl-show-events owl-carousel">
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-01.jpg" alt=""></a>
+                            <a><img src="assets/images/show-events-01.jpg" alt=""></a>
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-02.jpg" alt=""></a> 
+                            <a><img src="assets/images/show-events-02.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a> 
+                            <a><img src="assets/images/show-events-03.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
+                            <a><img src="assets/images/show-events-04.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-01.jpg" alt=""></a> 
+                            <a><img src="assets/images/show-events-01.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-02.jpg" alt=""></a> 
+                            <a><img src="assets/images/show-events-02.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a> 
+                            <a><img src="assets/images/show-events-03.jpg" alt=""></a> 
                         </div>
                         <div class="item">
-                            <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
+                            <a><img src="assets/images/show-events-04.jpg" alt=""></a> 
                         </div>
                     </div>
                 </div>
